Create the clients list from the clients.cs file with the Clientscontroller.cs file

--- a/HairSalon/Views/Home/Index.cshtml
+++ b/HairSalon/Views/Home/Index.cshtml
@@ -1,5 +1,7 @@
 @{
   Layout ="_Layout";
-
 }
-<h1>welcome to Claire Hair Salon</h1>
+
+<h1>Welocome  To Eau Claire Salon</h1>
+
+<h4>@Html.ActionLink("Here is List Of Our Clients","Index","Clients")</h4>
