--- a/HairSalon/Views/Stylists/Index.cshtml
+++ b/HairSalon/Views/Stylists/Index.cshtml
@@ -1,5 +1,22 @@
-@* @{
-  Layout ="_Layout";
-
+@{
+  Layout = "_Layout";
 }
-<h2>List Of Stylists</h2> *@
+
+@using HairSalon.Models;
+
+  <h1>Stylists at Mullets R Us Salon:</h1>
+
+@if (@Model.Count == 0)
+{
+  <h3>No Stylists have been added yet!</h3>
+} 
+
+<ul>
+  @foreach(Stylist stylist in Model)
+  {
+    <li>@Html.ActionLink($"{stylist.Name}", "Details", new { id = stylist.StylistId })</li>
+  }
+</ul>
+
+<p>@Html.ActionLink("Add new stylist", "Create")</p>
+<p>@Html.ActionLink("Home", "Index", "Home")</p>
