Create the Views files for the stylist Model

--- a/HairSalon/Views/Home/Index.cshtml
+++ b/HairSalon/Views/Home/Index.cshtml
@@ -4,4 +4,7 @@
 
 <h1>Welocome  To Eau Claire Salon</h1>
 
+
+<h4>@Html.ActionLink("Here is List Of Our Stylists","Index","Stylists")</h4>
+
 <h4>@Html.ActionLink("Here is List Of Our Clients","Index","Clients")</h4>
