--- a/HairSalon/Views/Clients/Create.cshtml
+++ b/HairSalon/Views/Clients/Create.cshtml
@@ -1,10 +1,12 @@
 @{
   Layout ="_Layout";
-
 }
+@using HairSalon.Models;
+
 @model HairSalon.Models.Client
+
 <h1>Add a new Client</h1>
-@using (Html.BeginForm())
+  @using (Html.BeginForm())
 {
   @Html.LabelFor(model =>model.Name)
   @Html.TextBoxFor(model =>model.Name)
@@ -14,6 +16,10 @@
   @Html.TextBoxFor(model =>model.Massage)
   @Html.LabelFor(model => model.Stylist)
   @Html.DropDownList("StylistId")
+  
   <input type="Submit" value ="Register"/>
 }
+
+
+
 <h4>@Html.ActionLink("Client's List","Index","Clients")</h4>
